--- a/Dania brackets/jutlandia polnocna.html
+++ b/Dania brackets/jutlandia polnocna.html
@@ -64,7 +64,7 @@
                 <h5>Klitmøller</h5>
             </a>
             <section>
-                <p class="desc">Niesamowicie wietrzne miejsce nad Morzem Północnym, znane z ogromnych fal idealnych dla surferów. To dlatego to miejsce nazywane jest "Cold Hawaii". Surferzy byli tam zawsze, kiedy szliśmy na plażę! Ostrzegam, że w tym regionie wieje okropnie cały dzień i całą noc, bez nawet jednego dnia wyjątku. Po dwóch tygodniach tych wakacji nie chciałam słyszeć szumu wiatru już nigdy więcej... Pogoda jest tam zawsze pochmurna, jak zresztą często w całej Danii. Nawet latem jest tam dość zimno. To idealne miejsce do odnalezienia spokoju i wyciszenia się patrząc na surowy krajobraz. Koniecznie musicie zaliczyć kąpiel w Morzu Północnym – niech nie zwiedzie was zimny wiatr – woda latem jest całkiem ciepła, uważajcie jednak na ogromne fale, trudno się poruszać w tych wzburzonych kłębach!</p>
+                <p class="desc">Niesamowicie wietrzne miejsce nad Morzem Północnym, znane z ogromnych fal, idealnych dla surferów. To dlatego to miejsce nazywane jest "Cold Hawaii". Surferzy byli tam zawsze, kiedy szliśmy na plażę! Ostrzegam, że w tym regionie wieje okropnie cały dzień i całą noc, bez nawet jednego dnia wyjątku. Po dwóch tygodniach tych wakacji nie chciałam słyszeć szumu wiatru już nigdy więcej... Pogoda jest tam zawsze pochmurna, jak zresztą często w całej Danii. Nawet latem jest tam dość zimno. To idealne miejsce do odnalezienia spokoju i wyciszenia się patrząc na surowy krajobraz. Koniecznie musicie zaliczyć kąpiel w Morzu Północnym – niech nie zwiedzie was zimny wiatr – woda latem jest całkiem ciepła, uważajcie jednak na ogromne fale - trudno się poruszać w tych wzburzonych kłębach!</p>
             </section>
             <section class="gallery">
                 <div class="photo">
@@ -119,7 +119,7 @@
                 <h5>Coastal Battery</h5>
             </a>
             <section>
-                <p class="desc">Nieco niżej niż plaża Cold Hawaii możemy znaleźć wojskowe bunkry i baterie z II wojny światowej. Tmtejsza plaża jest bardzo szeroka i idealna na spacer przy zachodzie słońca!</p>
+                <p class="desc">Nieco niżej niż plaża Cold Hawaii możemy znaleźć wojskowe bunkry i baterie z II wojny światowej. Tamtejsza plaża jest bardzo szeroka i idealna na spacery przy zachodzie słońca!</p>
             </section>
             <section class="gallery">
                 <div class="photo">
